<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_contact">Home</string>
    <string name="menu_home">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="book">Book</string>
    <string name="title_activity_filter">Filter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_area">Enter Area</string>
    <string name="enter_time_period_dd_mm_yyyy_dd_mm_yyyy">Enter Time Period (DD/MM/YYYY-DD/MM/YYYY)</string>
    <string name="enter_number_of_tenants">Enter Number of Tenants</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_stars">Enter Stars</string>
    <string name="submit">Submit</string>
    <string name="try_again">Try Again</string>
    <string name="no_rooms_found_for_the_selected_filters">No rooms found for the selected filters.</string>
    <string name="olga_tympakianaki">Olga Tympakianaki</string>
    <string name="email_p3220219_aueb_gr">Email: p3220219@aueb.gr</string>
    <string name="am_3220219">AM: 3220219</string>
    <string name="available_rooms">Available Rooms</string>
    <string name="contact">Contact</string>
    <string name="Book" />
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="room_name">Room Name</string>
    <string name="enter_number_of_rooms_to_book">Enter number of rooms to book</string>
    <string name="booking_app">Booking App</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>